@@ -62,7 +62,7 @@
     </include>
 
     <include name="Topbar_Center">
-        <control type="label">
+        <control type="label" id="9935">
             <visible>$PARAM[visible]</visible>
             <visible>!Skin.HasSetting(DisableCenter)</visible>
             <aligny>center</aligny>
@@ -72,6 +72,17 @@
             <label>$VAR[Label_Header_Center]</label>
             <include>Animation_FadeInOut</include>
             <visible>!Control.HasFocus(300) | Window.IsVisible(SettingsCategory.xml) | Window.IsVisible(SettingsProfile.xml) | Window.IsVisible(SkinSettings.xml) | Window.IsVisible(eventlog) | Window.IsVisible(SettingsSystemInfo.xml)</visible>
+            <visible>String.IsEmpty(Control.GetLabel(9934)) | !Control.IsVisible(9934)</visible>
+        </control>
+        <control type="image" id="9934">
+            <visible>$PARAM[visible]</visible>
+            <visible>Skin.HasSetting(EnableClearlogo)</visible>
+            <texture background="true">$VAR[Image_ClearLogo]</texture>
+            <aspectratio align="center" aligny="center">keep</aspectratio>
+            <centertop>50%</centertop>
+            <include>Animation_FadeInOut</include>
+            <visible>!Control.HasFocus(300) | Window.IsVisible(SettingsCategory.xml) | Window.IsVisible(SettingsProfile.xml) | Window.IsVisible(SkinSettings.xml) | Window.IsVisible(eventlog) | Window.IsVisible(SettingsSystemInfo.xml)</visible>
+            <visible>!Control.IsVisible(9935)</visible>
         </control>
     </include>
     <include name="Topbar_Right">
