@@ -1,5 +1,6 @@
 0.9.29
 Experimental custom search function
+Add clearlogo option to furniture
 
 0.9.28
 Add Tri-Panel view
